--- a/src/app/search-screen/search-screen.component.html
+++ b/src/app/search-screen/search-screen.component.html
@@ -1,30 +1,58 @@
-<form>
-<div class="container">
-	<img src="assets/icons/github.jpeg" alt="Norway" style="width:100%;">
-	 <div class="top-left" >
-		<div class="row" style="height:100px; width:100%;">
-			OWNER : <input type="text" id="i53" class="form-control" placeholder="Owner" > 
-			 REPOSITORY : <input type="text" id="i53" class="form-control" placeholder="Repo">
-			<button type="submit" class=" button btn btn-primary">
+
+	
+	 <div class="top-left" style="margin-top: 1%;
+	 margin-left: -1%;">
+		<div class="row" style="height: 74px; width:100%;padding-left:14%;">
+			<span><img src="assets/icons/git.png" style="width:70px;height:50px;padding-top:3px;"></span>
+			<label for="owner">OWNER :</label> <input type="text" id="i53" [(ngModel)]="owner" class="form-control" placeholder="Owner" > 
+			 <label for="repository">REPOSITORY :</label> <input type="text" id="i53" class="form-control" placeholder="Repo" [(ngModel)]="repo1">
+			<button type="button" class=" button btn btn-primary" (click)="getSearchList();">
 			    		Submit 
 			 </button>
       </div>   
 	</div>
-	<div  class ="centered" style="margin:2%;padding-left:45px;">
-		<table style="background-color: grey;"> 
+	 
+       <div  *ngFor="let id of [1]; let i = index;">
+		   
+	<div  class ="centered" class="table-responsive table-compare" style="margin-left: 11%;
+	margin-top: 8%;">
+		
+		<table style="border-style: solid;" > 
 			<thead>
-				<tr >
-					<td style="color:black;padding-left: 10px;font-weight: bold; border-right:8px solid #f5f5f5;padding-top: 0.5%;padding-bottom: 1%;margin-left:10px;font-size:20px;"  >
-						hi
+				<tr>
+					<td style="color:black;padding-left: 10px;font-weight: bold; border-right:8px solid #f5f5f5;padding-top: 0.5%;padding-bottom: 1%;margin-left:10px;font-size:20px;" *ngFor= "let heading of searchCoulmnHeadings" >
+						{{heading.value}}
 					</td>
 				</tr>
 			</thead>
 			
 			<tbody>
-				
+				<tr *ngFor= "let value of data | paginate: { 
+                                                      itemsPerPage: 5,
+                                                      currentPage: p[i],id: id,
+                                                      totalItems: data.length }">
+					<td style="color:black;padding-left: 10px;font-weight: bold; border-right:8px solid #f5f5f5;padding-top: 0.5%;padding-bottom: 1%;margin-left:10px;font-size:20px;"  >
+						{{value.id}}
+					</td>
+					<td style="color:black;padding-left: 10px;font-weight: bold; border-right:8px solid #f5f5f5;padding-top: 0.5%;padding-bottom: 1%;margin-left:10px;font-size:20px;"  >
+						{{value.number}}
+					</td>
+					<td style="color:black;padding-left: 10px;font-weight: bold; border-right:8px solid #f5f5f5;padding-top: 0.5%;padding-bottom: 1%;margin-left:10px;font-size:20px;"  >
+						{{value.title}}
+					</td>
+					<td style="color:black;padding-left: 10px;font-weight: bold; border-right:8px solid #f5f5f5;padding-top: 0.5%;padding-bottom: 1%;margin-left:10px;font-size:20px;"  >
+						{{value.created_at | date}}
+					</td>
+				</tr>
 			</tbody>
 	    </table>
 	</div>
-	
+		   <br/>
+		   <br/>
+		  <ngx-spinner bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  loadingText="Loading..."
+  type="ball-scale-multiple"></ngx-spinner> 
+<pagination-controls (pageChange)="p[i] = $event" [id]="id"></pagination-controls>
 </div>
-</form>
